--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,6 +19,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
+  background-color:tomato;
   background-image: url(hana@2x.png);
   background-size: cover;
   color: white;
