--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ header nav {
     height: 600px;
     background-position: center;
     background-color: blueviolet;
-    background-image:url(./img/logo_02.JPG);
+    background-image:url(logo_02.JPG);
     background-size:cover;
     color: #fff;
     text-align: center;
