--- a/style.css
+++ b/style.css
@@ -19,10 +19,14 @@ body{
 a {
     color: rgb(255, 251, 251);
     text-decoration: none;
+   
 }
 img {
     /* 画像が親要素より大きくなることを防ぐ */
     max-width: 100%;
+}
+li {
+    list-style-type: none; 
 }
 
 /* ========================================
@@ -133,7 +137,7 @@ header nav {
     height: 600px;
     background-position: center;
     background-color: blueviolet;
-    background-image:url(logo_02.JPG);
+    background-image:url(./img/logo_02.JPG);
     background-size:cover;
     color: #fff;
     text-align: center;
@@ -184,7 +188,7 @@ header nav {
 .heikei {
     display: flex;
     justify-content: flex-end; 
-    background-image:url(bg_top_service_01.png); 
+    background-image:url(./images/bg_top_service_01.png); 
     background-repeat: no-repeat;
     width:100%;
     margin-left:40px;
@@ -246,7 +250,7 @@ header nav {
 .reason {
     width: 100%;
     height: 580px;
-    background-image: url(reason_01.JPG);
+    background-image: url(./img/reason_01.JPG);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right;
@@ -315,11 +319,11 @@ header nav {
     
 }
 .infoleft {
-    background-image: url('recruit.jpeg');
+    background-image: url(./img/recruit.jpeg);
     background-size: cover;
 }
 .inforight {
-    background-image: url('company.jpeg');
+    background-image: url(./img/company.jpeg);
     background-size: cover;
 }
 .combtn,
@@ -437,3 +441,10 @@ footer{
 .fot-right {
     display: inline-block;
 }
+
+/* アコーディオン */
+.menu {
+    display: none;
+   
+}
+
