--- a/responsive.css
+++ b/responsive.css
@@ -229,4 +229,59 @@
     footer {
         height: auto;
     }
+    /* バーカー */
+.burger {
+    width: 40px;
+    height: 40px;
+    background-image: url(img/burger.png);
+    background-size: 24px;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0 0 0 80px;
+    cursor: pointer;
+    /* バーガーを押下した後もバーガーを隠さない */
+    position: relative;
+    z-index: 2;
+}
+.burger:hover {
+    background-color: #ddd;
+    border-radius: 4px;
+}
+.burger.is-active {
+    background-image: url(img/close.png)
+}
+/* ＝＝＝＝＝＝＝＝＝＝＝＝＝＝
+　　 アコーディオン メニュー
+＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝ */
+
+.menu {
+    /* vh画面の高さ、vw幅一杯 */
+    width: 100vw;
+    height: 100vh;
+    color: rgb(250, 244, 244);
+    background-color: black;
+    opacity: 0.9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: none;
+    
+}
+.menu.is-active {
+    display: flex;
+}
+.menus{
+    display: block;
+    font-size:20px;
+    font-weight: 900;
+    border-bottom: 1px solid #f4f6f8;
+}
+.click-head a {
+    color: #f5f8f9;
+    padding: 20px;
+}
 }
