--- a/style.css
+++ b/style.css
@@ -39,12 +39,18 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 header img {
-    /* width: 230px; */
-    height: 40px;
-    padding: 15px 0 0 28px;
+    width: 230px;
+    height: 60px;
+    padding-left:28px;
+    line-height: 60px;
 }
 header nav {
     margin: 0;
