--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ header nav {
     background-size: cover;
 }
 .inforight {
-    background-image: url(company.jpeg);
+    background-image: url(/company.jpeg);
     background-size: cover;
 }
 .combtn,
