--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@ html,body, div{
 
 
 body{
-    max-width: 1440px;
+/*     max-width: 1440px; */
     margin: 0 auto;
     /* padding: 0.4%; */
 }
@@ -224,7 +224,7 @@ header nav {
 .reason {
     width: 100%;
     height: 580px;
-    background-image: url('img/reason_01.JPG');
+    background-image: url('reason_01.JPG');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right;
