--- a/responsive.css
+++ b/responsive.css
@@ -206,7 +206,7 @@
     }
 
     .fot-list a {
-        font-size:20px;
+/*         font-size:20px; */
         padding-left:0;
         border-bottom: 1px solid #ddd;
         display: inline-block;
@@ -222,10 +222,12 @@
         line-height:65px;
         margin: 0 auto;
     }
-    .fot-left,
-    .fot-right {
+    .fot-left{
         font-size: 20px;
     }
+    .fot-right {
+        font-size:14px
+    }      
     footer {
         height: auto;
     }
