--- a/stylesheet.css
+++ b/stylesheet.css
@@ -147,16 +147,13 @@ header nav {
    margin-bottom: 75px;
 }
 .service-text p{
-    margin-bottom:0px;
+    margin-bottom:60px;
 }
 .service-text h2{
     color:#1157A4 ;
     font-size: 40px;
     font-weight: noinformal;  
-    margin-bottom:0;
 }
-.service-text h4 {
-    margin-top:0;
 
 .svwrap {
     width: 1090px;
@@ -243,7 +240,7 @@ header nav {
     padding: 100px 10px;
     display: block;
     color: #fff;
-    text-align: center;
+    margin: 0 auto;
 }
 .big-font {
     font-size: 35px!important;
@@ -424,4 +421,3 @@ footer{
     display: none;
    
 }
-
